Update 'rjsc8owx1-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b27d662eb3.8l1n.p3.openshiftapps.com/rhtap/rhtap-qe:3a2476b3485936d65010605dc7f2ed33eefdd106@sha256:ca47d4feca5de697d1cde54d86da6431844eb3f3335223e6a3193345ba203194

--- a/components/rjsc8owx1-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/rjsc8owx1-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rjsc8owx1-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b27d662eb3.8l1n.p3.openshiftapps.com/rhtap/rhtap-qe:3a2476b3485936d65010605dc7f2ed33eefdd106@sha256:ca47d4feca5de697d1cde54d86da6431844eb3f3335223e6a3193345ba203194
+          name: container-image
